ravi_bansal_13CS30026/Assignment-4/y.output
Terminals unused in grammar

   TYPEDEF
   STRUCT
   UNION


State 321 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | CONSTANT
    3                   | STRING_LITERAL
    4                   | '(' expression ')'

    5 postfix_expression: primary_expression
    6                   | postfix_expression '[' expression ']'
    7                   | postfix_expression '(' argument_expression_list_opt ')'
    8                   | postfix_expression '.' IDENTIFIER
    9                   | postfix_expression PTR_OP IDENTIFIER
   10                   | postfix_expression INC_OP
   11                   | postfix_expression DEC_OP
   12                   | '(' type_name ')' '{' initializer_list '}'
   13                   | '(' type_name ')' '{' initializer_list ',' '}'

   14 argument_expression_list: assignment_expression
   15                         | argument_expression_list ',' assignment_expression

   16 argument_expression_list_opt: argument_expression_list
   17                             | %empty

   18 unary_expression: postfix_expression
   19                 | INC_OP unary_expression
   20                 | DEC_OP unary_expression
   21                 | unary_operator cast_expression
   22                 | SIZEOF unary_expression
   23                 | SIZEOF '(' type_name ')'

   24 unary_operator: '&'
   25               | '*'
   26               | '+'
   27               | '-'
   28               | '~'
   29               | '!'

   30 cast_expression: unary_expression
   31                | '(' type_name ')' cast_expression

   32 multiplicative_expression: cast_expression
   33                          | multiplicative_expression '*' cast_expression
   34                          | multiplicative_expression '/' cast_expression
   35                          | multiplicative_expression '%' cast_expression

   36 additive_expression: multiplicative_expression
   37                    | additive_expression '+' multiplicative_expression
   38                    | additive_expression '-' multiplicative_expression

   39 shift_expression: additive_expression
   40                 | shift_expression LEFT_OP additive_expression
   41                 | shift_expression RIGHT_OP additive_expression

   42 relational_expression: shift_expression
   43                      | relational_expression '<' shift_expression
   44                      | relational_expression '>' shift_expression
   45                      | relational_expression LE_OP shift_expression
   46                      | relational_expression GE_OP shift_expression

   47 equality_expression: relational_expression
   48                    | equality_expression EQ_OP relational_expression
   49                    | equality_expression NE_OP relational_expression

   50 and_expression: equality_expression
   51               | and_expression '&' equality_expression

   52 exclusive_or_expression: and_expression
   53                        | exclusive_or_expression '^' and_expression

   54 inclusive_or_expression: exclusive_or_expression
   55                        | inclusive_or_expression '|' exclusive_or_expression

   56 logical_and_expression: inclusive_or_expression
   57                       | logical_and_expression AND_OP inclusive_or_expression

   58 logical_or_expression: logical_and_expression
   59                      | logical_or_expression OR_OP logical_and_expression

   60 conditional_expression: logical_or_expression
   61                       | logical_or_expression '?' expression ':' conditional_expression

   62 assignment_expression: conditional_expression
   63                      | unary_expression assignment_operator assignment_expression

   64 assignment_operator: '='
   65                    | MUL_ASSIGN
   66                    | DIV_ASSIGN
   67                    | MOD_ASSIGN
   68                    | ADD_ASSIGN
   69                    | SUB_ASSIGN
   70                    | LEFT_ASSIGN
   71                    | RIGHT_ASSIGN
   72                    | AND_ASSIGN
   73                    | XOR_ASSIGN
   74                    | OR_ASSIGN

   75 expression: assignment_expression
   76           | expression ',' assignment_expression

   77 constant_expression: conditional_expression

   78 declaration: declaration_specifiers init_declarator_list_opt ';'

   79 declaration_specifiers: storage_class_specifier declaration_specifiers_opt
   80                       | type_specifier declaration_specifiers_opt
   81                       | type_qualifier declaration_specifiers_opt
   82                       | function_specifier declaration_specifiers_opt

   83 declaration_specifiers_opt: declaration_specifiers
   84                           | %empty

   85 init_declarator_list: init_declarator
   86                     | init_declarator_list ',' init_declarator

   87 init_declarator_list_opt: init_declarator_list
   88                         | %empty

   89 init_declarator: declarator
   90                | declarator '=' initializer

   91 storage_class_specifier: EXTERN
   92                        | STATIC
   93                        | AUTO
   94                        | REGISTER

   95 type_specifier: VOID
   96               | CHAR
   97               | SHORT
   98               | INT
   99               | LONG
  100               | FLOAT
  101               | DOUBLE
  102               | SIGNED
  103               | UNSIGNED
  104               | TYPE_NAME
  105               | BOOL
  106               | COMPLEX
  107               | IMAGINARY
  108               | enum_specifier

  109 specifier_qualifier_list: type_specifier specifier_qualifier_list_opt
  110                         | type_qualifier specifier_qualifier_list_opt

  111 specifier_qualifier_list_opt: specifier_qualifier_list
  112                             | %empty

  113 enum_specifier: ENUM '{' enumerator_list '}'
  114               | ENUM IDENTIFIER '{' enumerator_list '}'
  115               | ENUM '{' enumerator_list ',' '}'
  116               | ENUM IDENTIFIER '{' enumerator_list ',' '}'
  117               | ENUM IDENTIFIER

  118 enumerator_list: enumerator
  119                | enumerator_list ',' enumerator

  120 enumerator: enumeration_constant
  121           | enumeration_constant '=' constant_expression

  122 enumeration_constant: IDENTIFIER

  123 type_qualifier: CONST
  124               | RESTRICT
  125               | VOLATILE

  126 function_specifier: INLINE

  127 declarator: pointer direct_declarator
  128           | direct_declarator

  129 direct_declarator: IDENTIFIER
  130                  | '(' declarator ')'
  131                  | direct_declarator '[' type_qualifier_list_opt assignment_expression_opt ']'
  132                  | direct_declarator '[' STATIC type_qualifier_list_opt assignment_expression ']'
  133                  | direct_declarator '[' type_qualifier_list STATIC assignment_expression ']'
  134                  | direct_declarator '[' type_qualifier_list_opt '*' ']'
  135                  | direct_declarator '(' parameter_type_list ')'
  136                  | direct_declarator '(' identifier_list_opt ')'

  137 identifier_list_opt: identifier_list
  138                    | %empty

  139 type_qualifier_list_opt: type_qualifier_list
  140                        | %empty

  141 assignment_expression_opt: assignment_expression
  142                          | %empty

  143 pointer: '*'
  144        | '*' type_qualifier_list
  145        | '*' pointer
  146        | '*' type_qualifier_list pointer

  147 type_qualifier_list: type_qualifier
  148                    | type_qualifier_list type_qualifier

  149 parameter_type_list: parameter_list
  150                    | parameter_list ',' ELLIPSIS

  151 parameter_list: parameter_declaration
  152               | parameter_list ',' parameter_declaration

  153 parameter_declaration: declaration_specifiers declarator
  154                      | declaration_specifiers

  155 identifier_list: IDENTIFIER
  156                | identifier_list ',' IDENTIFIER

  157 type_name: specifier_qualifier_list

  158 initializer: assignment_expression
  159            | '{' initializer_list '}'
  160            | '{' initializer_list ',' '}'

  161 initializer_list: initializer
  162                 | designation initializer
  163                 | initializer_list ',' initializer
  164                 | initializer_list ',' designation initializer

  165 designation: designator_list '='

  166 designator_list: designator
  167                | designator_list designator

  168 designator: '[' constant_expression ']'
  169           | '.' IDENTIFIER

  170 statement: labeled_statement
  171          | compound_statement
  172          | expression_statement
  173          | selection_statement
  174          | iteration_statement
  175          | jump_statement

  176 labeled_statement: IDENTIFIER ':' statement
  177                  | CASE constant_expression ':' statement
  178                  | DEFAULT ':' statement

  179 compound_statement: '{' block_item_list '}'
  180                   | '{' '}'

  181 block_item_list: block_item
  182                | block_item_list block_item

  183 block_item: declaration
  184           | statement

  185 expression_statement: ';'
  186                     | expression ';'

  187 selection_statement: IF '(' expression ')' statement
  188                    | IF '(' expression ')' statement ELSE statement
  189                    | SWITCH '(' expression ')' statement

  190 iteration_statement: WHILE '(' expression ')' statement
  191                    | DO statement WHILE '(' expression ')' ';'
  192                    | FOR '(' expression_statement expression_statement ')' statement
  193                    | FOR '(' expression_statement expression_statement expression ')' statement
  194                    | FOR '(' declaration expression_statement ')' statement
  195                    | FOR '(' declaration expression_statement expression ')' statement

  196 jump_statement: GOTO IDENTIFIER ';'
  197               | CONTINUE ';'
  198               | BREAK ';'
  199               | RETURN ';'
  200               | RETURN expression ';'

  201 translation_unit: external_declaration
  202                 | translation_unit external_declaration

  203 external_declaration: function_definition
  204                     | declaration

  205 function_definition: declaration_specifiers declarator declaration_list compound_statement
  206                    | declaration_specifiers declarator compound_statement

  207 declaration_list: declaration
  208                 | declaration_list declaration


Terminals, with rules where they appear

$end (0) 0
'!' (33) 29
'%' (37) 35
'&' (38) 24 51
'(' (40) 4 7 12 13 23 31 130 135 136 187 188 189 190 191 192 193 194
    195
')' (41) 4 7 12 13 23 31 130 135 136 187 188 189 190 191 192 193 194
    195
'*' (42) 25 33 134 143 144 145 146
'+' (43) 26 37
',' (44) 13 15 76 86 115 116 119 150 152 156 160 163 164
'-' (45) 27 38
'.' (46) 8 169
'/' (47) 34
':' (58) 61 176 177 178
';' (59) 78 185 186 191 196 197 198 199 200
'<' (60) 43
'=' (61) 64 90 121 165
'>' (62) 44
'?' (63) 61
'[' (91) 6 131 132 133 134 168
']' (93) 6 131 132 133 134 168
'^' (94) 53
'{' (123) 12 13 113 114 115 116 159 160 179 180
'|' (124) 55
'}' (125) 12 13 113 114 115 116 159 160 179 180
'~' (126) 28
error (256)
IDENTIFIER (258) 1 8 9 114 116 117 122 129 155 156 169 176 196
CONSTANT (259) 2
STRING_LITERAL (260) 3
SIZEOF (261) 22 23
PTR_OP (262) 9
INC_OP (263) 10 19
DEC_OP (264) 11 20
LEFT_OP (265) 40
RIGHT_OP (266) 41
LE_OP (267) 45
GE_OP (268) 46
EQ_OP (269) 48
NE_OP (270) 49
AND_OP (271) 57
OR_OP (272) 59
MUL_ASSIGN (273) 65
DIV_ASSIGN (274) 66
MOD_ASSIGN (275) 67
ADD_ASSIGN (276) 68
SUB_ASSIGN (277) 69
LEFT_ASSIGN (278) 70
RIGHT_ASSIGN (279) 71
AND_ASSIGN (280) 72
XOR_ASSIGN (281) 73
OR_ASSIGN (282) 74
TYPE_NAME (283) 104
TYPEDEF (284)
EXTERN (285) 91
STATIC (286) 92 132 133
AUTO (287) 93
REGISTER (288) 94
CHAR (289) 96
SHORT (290) 97
INT (291) 98
LONG (292) 99
SIGNED (293) 102
UNSIGNED (294) 103
FLOAT (295) 100
DOUBLE (296) 101
CONST (297) 123
RESTRICT (298) 124
VOLATILE (299) 125
VOID (300) 95
BOOL (301) 105
COMPLEX (302) 106
IMAGINARY (303) 107
INLINE (304) 126
STRUCT (305)
UNION (306)
ENUM (307) 113 114 115 116 117
ELLIPSIS (308) 150
CASE (309) 177
DEFAULT (310) 178
IF (311) 187 188
ELSE (312) 188
SWITCH (313) 189
WHILE (314) 190 191
DO (315) 191
FOR (316) 192 193 194 195
GOTO (317) 196
CONTINUE (318) 197
BREAK (319) 198
RETURN (320) 199 200


Nonterminals, with rules where they appear

$accept (90)
    on left: 0
primary_expression (91)
    on left: 1 2 3 4, on right: 5
postfix_expression (92)
    on left: 5 6 7 8 9 10 11 12 13, on right: 6 7 8 9 10 11 18
argument_expression_list (93)
    on left: 14 15, on right: 15 16
argument_expression_list_opt (94)
    on left: 16 17, on right: 7
unary_expression (95)
    on left: 18 19 20 21 22 23, on right: 19 20 22 30 63
unary_operator (96)
    on left: 24 25 26 27 28 29, on right: 21
cast_expression (97)
    on left: 30 31, on right: 21 31 32 33 34 35
multiplicative_expression (98)
    on left: 32 33 34 35, on right: 33 34 35 36 37 38
additive_expression (99)
    on left: 36 37 38, on right: 37 38 39 40 41
shift_expression (100)
    on left: 39 40 41, on right: 40 41 42 43 44 45 46
relational_expression (101)
    on left: 42 43 44 45 46, on right: 43 44 45 46 47 48 49
equality_expression (102)
    on left: 47 48 49, on right: 48 49 50 51
and_expression (103)
    on left: 50 51, on right: 51 52 53
exclusive_or_expression (104)
    on left: 52 53, on right: 53 54 55
inclusive_or_expression (105)
    on left: 54 55, on right: 55 56 57
logical_and_expression (106)
    on left: 56 57, on right: 57 58 59
logical_or_expression (107)
    on left: 58 59, on right: 59 60 61
conditional_expression (108)
    on left: 60 61, on right: 61 62 77
assignment_expression (109)
    on left: 62 63, on right: 14 15 63 75 76 132 133 141 158
assignment_operator (110)
    on left: 64 65 66 67 68 69 70 71 72 73 74, on right: 63
expression (111)
    on left: 75 76, on right: 4 6 61 76 186 187 188 189 190 191 193
    195 200
constant_expression (112)
    on left: 77, on right: 121 168 177
declaration (113)
    on left: 78, on right: 183 194 195 204 207 208
declaration_specifiers (114)
    on left: 79 80 81 82, on right: 78 83 153 154 205 206
declaration_specifiers_opt (115)
    on left: 83 84, on right: 79 80 81 82
init_declarator_list (116)
    on left: 85 86, on right: 86 87
init_declarator_list_opt (117)
    on left: 87 88, on right: 78
init_declarator (118)
    on left: 89 90, on right: 85 86
storage_class_specifier (119)
    on left: 91 92 93 94, on right: 79
type_specifier (120)
    on left: 95 96 97 98 99 100 101 102 103 104 105 106 107 108, on right:
    80 109
specifier_qualifier_list (121)
    on left: 109 110, on right: 111 157
specifier_qualifier_list_opt (122)
    on left: 111 112, on right: 109 110
enum_specifier (123)
    on left: 113 114 115 116 117, on right: 108
enumerator_list (124)
    on left: 118 119, on right: 113 114 115 116 119
enumerator (125)
    on left: 120 121, on right: 118 119
enumeration_constant (126)
    on left: 122, on right: 120 121
type_qualifier (127)
    on left: 123 124 125, on right: 81 110 147 148
function_specifier (128)
    on left: 126, on right: 82
declarator (129)
    on left: 127 128, on right: 89 90 130 153 205 206
direct_declarator (130)
    on left: 129 130 131 132 133 134 135 136, on right: 127 128 131
    132 133 134 135 136
identifier_list_opt (131)
    on left: 137 138, on right: 136
type_qualifier_list_opt (132)
    on left: 139 140, on right: 131 132 134
assignment_expression_opt (133)
    on left: 141 142, on right: 131
pointer (134)
    on left: 143 144 145 146, on right: 127 145 146
type_qualifier_list (135)
    on left: 147 148, on right: 133 139 144 146 148
parameter_type_list (136)
    on left: 149 150, on right: 135
parameter_list (137)
    on left: 151 152, on right: 149 150 152
parameter_declaration (138)
    on left: 153 154, on right: 151 152
identifier_list (139)
    on left: 155 156, on right: 137 156
type_name (140)
    on left: 157, on right: 12 13 23 31
initializer (141)
    on left: 158 159 160, on right: 90 161 162 163 164
initializer_list (142)
    on left: 161 162 163 164, on right: 12 13 159 160 163 164
designation (143)
    on left: 165, on right: 162 164
designator_list (144)
    on left: 166 167, on right: 165 167
designator (145)
    on left: 168 169, on right: 166 167
statement (146)
    on left: 170 171 172 173 174 175, on right: 176 177 178 184 187
    188 189 190 191 192 193 194 195
labeled_statement (147)
    on left: 176 177 178, on right: 170
compound_statement (148)
    on left: 179 180, on right: 171 205 206
block_item_list (149)
    on left: 181 182, on right: 179 182
block_item (150)
    on left: 183 184, on right: 181 182
expression_statement (151)
    on left: 185 186, on right: 172 192 193 194 195
selection_statement (152)
    on left: 187 188 189, on right: 173
iteration_statement (153)
    on left: 190 191 192 193 194 195, on right: 174
jump_statement (154)
    on left: 196 197 198 199 200, on right: 175
translation_unit (155)
    on left: 201 202, on right: 0 202
external_declaration (156)
    on left: 203 204, on right: 201 202
function_definition (157)
    on left: 205 206, on right: 203
declaration_list (158)
    on left: 207 208, on right: 205 208


State 0

    0 $accept: . translation_unit $end

    TYPE_NAME  shift, and go to state 1
    EXTERN     shift, and go to state 2
    STATIC     shift, and go to state 3
    AUTO       shift, and go to state 4
    REGISTER   shift, and go to state 5
    CHAR       shift, and go to state 6
    SHORT      shift, and go to state 7
    INT        shift, and go to state 8
    LONG       shift, and go to state 9
    SIGNED     shift, and go to state 10
    UNSIGNED   shift, and go to state 11
    FLOAT      shift, and go to state 12
    DOUBLE     shift, and go to state 13
    CONST      shift, and go to state 14
    RESTRICT   shift, and go to state 15
    VOLATILE   shift, and go to state 16
    VOID       shift, and go to state 17
    BOOL       shift, and go to state 18
    COMPLEX    shift, and go to state 19
    IMAGINARY  shift, and go to state 20
    INLINE     shift, and go to state 21
    ENUM       shift, and go to state 22

    declaration              go to state 23
    declaration_specifiers   go to state 24
    storage_class_specifier  go to state 25
    type_specifier           go to state 26
    enum_specifier           go to state 27
    type_qualifier           go to state 28
    function_specifier       go to state 29
    translation_unit         go to state 30
    external_declaration     go to state 31
    function_definition      go to state 32


State 1

  104 type_specifier: TYPE_NAME .

    $default  reduce using rule 104 (type_specifier)


State 2

   91 storage_class_specifier: EXTERN .

    $default  reduce using rule 91 (storage_class_specifier)


State 3

   92 storage_class_specifier: STATIC .

    $default  reduce using rule 92 (storage_class_specifier)


State 4

   93 storage_class_specifier: AUTO .

    $default  reduce using rule 93 (storage_class_specifier)


State 5

   94 storage_class_specifier: REGISTER .

    $default  reduce using rule 94 (storage_class_specifier)


State 6

   96 type_specifier: CHAR .

    $default  reduce using rule 96 (type_specifier)


State 7

   97 type_specifier: SHORT .

    $default  reduce using rule 97 (type_specifier)


State 8

   98 type_specifier: INT .

    $default  reduce using rule 98 (type_specifier)


State 9

   99 type_specifier: LONG .

    $default  reduce using rule 99 (type_specifier)


State 10

  102 type_specifier: SIGNED .

    $default  reduce using rule 102 (type_specifier)


State 11

  103 type_specifier: UNSIGNED .

    $default  reduce using rule 103 (type_specifier)


State 12

  100 type_specifier: FLOAT .

    $default  reduce using rule 100 (type_specifier)


State 13

  101 type_specifier: DOUBLE .

    $default  reduce using rule 101 (type_specifier)


State 14

  123 type_qualifier: CONST .

    $default  reduce using rule 123 (type_qualifier)


State 15

  124 type_qualifier: RESTRICT .

    $default  reduce using rule 124 (type_qualifier)


State 16

  125 type_qualifier: VOLATILE .

    $default  reduce using rule 125 (type_qualifier)


State 17

   95 type_specifier: VOID .

    $default  reduce using rule 95 (type_specifier)


State 18

  105 type_specifier: BOOL .

    $default  reduce using rule 105 (type_specifier)


State 19

  106 type_specifier: COMPLEX .

    $default  reduce using rule 106 (type_specifier)


State 20

  107 type_specifier: IMAGINARY .

    $default  reduce using rule 107 (type_specifier)


State 21

  126 function_specifier: INLINE .

    $default  reduce using rule 126 (function_specifier)


State 22

  113 enum_specifier: ENUM . '{' enumerator_list '}'
  114               | ENUM . IDENTIFIER '{' enumerator_list '}'
  115               | ENUM . '{' enumerator_list ',' '}'
  116               | ENUM . IDENTIFIER '{' enumerator_list ',' '}'
  117               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 33
    '{'         shift, and go to state 34


State 23

  204 external_declaration: declaration .

    $default  reduce using rule 204 (external_declaration)


State 24

   78 declaration: declaration_specifiers . init_declarator_list_opt ';'
  205 function_definition: declaration_specifiers . declarator declaration_list compound_statement
  206                    | declaration_specifiers . declarator compound_statement

    IDENTIFIER  shift, and go to state 35
    '('         shift, and go to state 36
    '*'         shift, and go to state 37

    $default  reduce using rule 88 (init_declarator_list_opt)

    init_declarator_list      go to state 38
    init_declarator_list_opt  go to state 39
    init_declarator           go to state 40
    declarator                go to state 41
    direct_declarator         go to state 42
    pointer                   go to state 43


State 25

   79 declaration_specifiers: storage_class_specifier . declaration_specifiers_opt

    TYPE_NAME  shift, and go to state 1
    EXTERN     shift, and go to state 2
    STATIC     shift, and go to state 3
    AUTO       shift, and go to state 4
    REGISTER   shift, and go to state 5
    CHAR       shift, and go to state 6
    SHORT      shift, and go to state 7
    INT        shift, and go to state 8
    LONG       shift, and go to state 9
    SIGNED     shift, and go to state 10
    UNSIGNED   shift, and go to state 11
    FLOAT      shift, and go to state 12
    DOUBLE     shift, and go to state 13
    CONST      shift, and go to state 14
    RESTRICT   shift, and go to state 15
    VOLATILE   shift, and go to state 16
    VOID       shift, and go to state 17
    BOOL       shift, and go to state 18
    COMPLEX    shift, and go to state 19
    IMAGINARY  shift, and go to state 20
    INLINE     shift, and go to state 21
    ENUM       shift, and go to state 22

    $default  reduce using rule 84 (declaration_specifiers_opt)

    declaration_specifiers      go to state 44
    declaration_specifiers_opt  go to state 45
    storage_class_specifier     go to state 25
    type_specifier              go to state 26
    enum_specifier              go to state 27
    type_qualifier              go to state 28
    function_specifier          go to state 29


State 26

   80 declaration_specifiers: type_specifier . declaration_specifiers_opt

    TYPE_NAME  shift, and go to state 1
    EXTERN     shift, and go to state 2
    STATIC     shift, and go to state 3
    AUTO       shift, and go to state 4
    REGISTER   shift, and go to state 5
    CHAR       shift, and go to state 6
    SHORT      shift, and go to state 7
    INT        shift, and go to state 8
    LONG       shift, and go to state 9
    SIGNED     shift, and go to state 10
    UNSIGNED   shift, and go to state 11
    FLOAT      shift, and go to state 12
    DOUBLE     shift, and go to state 13
    CONST      shift, and go to state 14
    RESTRICT   shift, and go to state 15
    VOLATILE   shift, and go to state 16
    VOID       shift, and go to state 17
    BOOL       shift, and go to state 18
    COMPLEX    shift, and go to state 19
    IMAGINARY  shift, and go to state 20
    INLINE     shift, and go to state 21
    ENUM       shift, and go to state 22

    $default  reduce using rule 84 (declaration_specifiers_opt)

    declaration_specifiers      go to state 44
    declaration_specifiers_opt  go to state 46
    storage_class_specifier     go to state 25
    type_specifier              go to state 26
    enum_specifier              go to state 27
    type_qualifier              go to state 28
    function_specifier          go to state 29


State 27

  108 type_specifier: enum_specifier .

    $default  reduce using rule 108 (type_specifier)


State 28

   81 declaration_specifiers: type_qualifier . declaration_specifiers_opt

    TYPE_NAME  shift, and go to state 1
    EXTERN     shift, and go to state 2
    STATIC     shift, and go to state 3
    AUTO       shift, and go to state 4
    REGISTER   shift, and go to state 5
    CHAR       shift, and go to state 6
    SHORT      shift, and go to state 7
    INT        shift, and go to state 8
    LONG       shift, and go to state 9
    SIGNED     shift, and go to state 10
    UNSIGNED   shift, and go to state 11
    FLOAT      shift, and go to state 12
    DOUBLE     shift, and go to state 13
    CONST      shift, and go to state 14
    RESTRICT   shift, and go to state 15
    VOLATILE   shift, and go to state 16
    VOID       shift, and go to state 17
    BOOL       shift, and go to state 18
    COMPLEX    shift, and go to state 19
    IMAGINARY  shift, and go to state 20
    INLINE     shift, and go to state 21
    ENUM       shift, and go to state 22

    $default  reduce using rule 84 (declaration_specifiers_opt)

    declaration_specifiers      go to state 44
    declaration_specifiers_opt  go to state 47
    storage_class_specifier     go to state 25
    type_specifier              go to state 26
    enum_specifier              go to state 27
    type_qualifier              go to state 28
    function_specifier          go to state 29


State 29

   82 declaration_specifiers: function_specifier . declaration_specifiers_opt
